<resources>

    <string name="Choose">What do you want?</string>
    <string name="app_name">BookMyStore</string>
    <string name="content_splash">Image of splash screen</string>
    <string name="content_vegetable">Vegetable image</string>
    <string name="content_grocery">Grocery Image</string>
    <string name="button_grocery"><![CDATA[>]]></string>
    <string name="button_vegetables"><![CDATA[>]]></string>
    <string name="title_activity_appointment">Token Form</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Time Slots for the spinner -->
    <string name="time">Time Slot</string>
    <string name="time0">Choose a Time Slot</string>
    <string name="time1">9 am to 10 am</string>
    <string name="time2">10 am to 11 am</string>
    <string name="time3">11 am to 12 pm</string>
    <string name="time4">12 pm to 1 pm</string>
    <string name="customer_name">Enter customer name</string>
    <string name="customer_name_hints">Customer Name</string>
    <string name="show_details_button">SHOW DETAILS</string>
    <string name="submit_button">SUBMIT</string>
    <string name="title_activity_single_place">Place Details</string>
    <string name="grocery_text">Super Markets</string>
    <string name="check_details">Tap to check details</string>
    <string name="vegetable_text">Shopping Malls</string>
    <string name="places_list">Nearby Stores</string>
    <string name="phone_no">Phone Number</string>
    <string name="customer_name_text">Customer Name</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
    <string name="timeslot">Timeslot</string>
    <string name="date_of_shopping">Date of shopping</string>
    <string name="time_slot_chosen">Time slot chosen</string>
    <string name="shop_name">Shop Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="spinner">Time Slot</string>
    <string name="details">Place Details</string>
    <string name="screenshot">Screenshot</string>
    <string name="about">About</string>
    <string name="about_us_description">This application is meant for maintaining social distancing as well as to get your necessities without any fuzz. </string>
    <string name="FACEBOOK_ID">https://www.facebook.com/aadhitya.aadhi.9/</string>
    <string name="GMAIL_ID">firefliesthe4@gmail.com</string>

</resources>
