<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/grocery_image"
        android:layout_width="159dp"
        android:layout_height="177dp"
        app:layout_constraintBottom_toTopOf="@+id/vegetable_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noun_groceries_2768498"
        android:contentDescription="@string/content_grocery" />

    <ImageView
        android:id="@+id/vegetable_image"
        android:layout_width="156dp"
        android:layout_height="177dp"
        android:layout_marginBottom="144dp"
        android:contentDescription="@string/content_vegetable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/noun_vegetable_3047936" />

    <Button
        android:id="@+id/button_grocery"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="@color/Yellow"
        android:text="@string/button_grocery"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/vegetable_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocery_image"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_vegetables"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:text="@string/button_vegetables"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@color/Yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetable_image"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>