<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Appointment"
    tools:showIn="@layout/activity_appointment1"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputName"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/customeret"
                    style="@style/modifiedEditText"
                    android:hint="@string/customer_name"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:autofillHints="@string/customer_name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputEmail"
                android:layout_width="wrap_content"
                android:layout_height="170dp">

                <TextView
                    android:id="@+id/txtdate"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorPrimary"
                    style="@style/modifiedEditText"
                    android:textSize="18sp"
                    android:text="@string/date" />

                <DatePicker
                    android:id="@+id/date"
                    style="@style/modifiedEditText"
                    android:layout_width="340dp"
                    android:layout_height="155dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtspinner"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    style="@style/modifiedEditText"
                    android:text="@string/spinner" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/timeslotspinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:entries="@array/timeslotlist"
                    android:prompt="@string/time"
                    style="@style/modifiedEditText"
                    android:spinnerMode="dropdown"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_number"
                    style="@style/modifiedEditText"
                    android:layout_marginBottom="6dp"
                    android:textSize="18sp"
                    android:hint="@string/phone_no"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/show_details_button"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="100dp"
                    android:background="@drawable/centre_button"
                    android:text="@string/show_details_button"
                    android:textColor="@color/whiteTextColor" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/centre_button"
                    android:text="@string/submit_button"
                    android:textColor="@color/whiteTextColor" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
