<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TokenActivity"
    tools:showIn="@layout/activity_token"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputName"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:id="@+id/customernametv"
                    style="@style/modifiedEditText"
                    android:layout_marginStart="5dp"
                    android:text="@string/customer_name_text"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:singleLine="true"/>

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5sp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputEmail"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:id="@+id/dateofshopping"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    style="@style/modifiedEditText"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputReg"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:id="@+id/timeslotchosen"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    style="@style/modifiedEditText"
                    android:text="@string/spinner" />

                <TextView
                    android:id="@+id/timeslot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputMob"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:id="@+id/phoneno"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    style="@style/modifiedEditText"
                    android:text="@string/phone_no" />

                <TextView
                    android:id="@+id/phones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputShop"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:id="@+id/shopname"
                    style="@style/modifiedEditText"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/shop_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonscreenshot"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:text="@string/screenshot"
                    android:background="@drawable/centre_button"
                    android:textColor="@color/whiteTextColor"/>

                <Button
                    android:id="@+id/buttonsms"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/centre_button"
                    android:text="SMS"
                    android:textColor="@color/whiteTextColor" />

                <Button
                    android:id="@+id/buttonemail"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                   android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10sp"
                    android:layout_gravity="center"
                    android:background="@drawable/centre_button"
                    android:text="Email"
                    android:textColor="@color/whiteTextColor" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
